# pin-detection

./: CMakeLists.txt  README.md  edge_demo.cc
